hook up landing page with backend api changes
